test/oscar/compiler/errors/undeclaredId.oscar
def main() => unit = {
  x = 1;
}